--- a/Makefile.common
+++ b/Makefile.common
@@ -88,8 +88,12 @@ SOURCES_C := $(CORE_DIR)/quasi88.c \
    $(LIBRETRO_COMM_DIR)/compat/fopen_utf8.c \
    $(LIBRETRO_COMM_DIR)/compat/compat_strcasestr.c \
    $(LIBRETRO_COMM_DIR)/compat/compat_strl.c \
+   $(LIBRETRO_COMM_DIR)/compat/compat_posix_string.c \
    $(LIBRETRO_COMM_DIR)/encodings/encoding_utf.c \
    $(LIBRETRO_COMM_DIR)/file/file_path.c \
+   $(LIBRETRO_COMM_DIR)/file/retro_dirent.c \
+   $(LIBRETRO_COMM_DIR)/lists/dir_list.c \
+   $(LIBRETRO_COMM_DIR)/lists/string_list.c \
    $(LIBRETRO_COMM_DIR)/streams/file_stream.c \
    $(LIBRETRO_COMM_DIR)/string/stdstring.c \
    $(LIBRETRO_COMM_DIR)/vfs/vfs_implementation.c
