Fix Switch buildbot compilation
CXXFLAGS were being defined twice

--- a/Makefile.common
+++ b/Makefile.common
@@ -27,7 +27,7 @@ endif
 CFLAGS += -DROM_DIR='"$(ROMDIR)"' -DDISK_DIR='"$(DISKDIR)"' -DTAPE_DIR='"$(TAPEDIR)"' \
    -DQUASI88_MINI -DCLIB_DECL='' -DUSE_SOUND=1 -DUSE_FMGEN=1
 
-CXXFLAGS += $(CFLAGS)
+CXXFLAGS += -DCLIB_DECL=''
 
 SOURCES_C := $(CORE_DIR)/quasi88.c \
    $(CORE_DIR)/emu.c \
