--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,11 @@ include:
   # Nintendo Wii
   - project: 'libretro-infrastructure/ci-templates'
     file: '/wii-static.yml'
-    
+
+  # Nintendo WiiU
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/wiiu-static.yml'
+
   # Nintendo Switch
   - project: 'libretro-infrastructure/ci-templates'
     file: '/libnx-static.yml'
@@ -127,6 +131,12 @@ libretro-build-wii:
     - .libretro-wii-static-retroarch-master
     - .core-defs
     
+# Nintendo WiiU
+libretro-build-wiiu:
+  extends:
+    - .libretro-wiiu-static-retroarch-master
+    - .core-defs 
+ 
 # Nintendo Switch
 libretro-build-libnx-aarch64:
   extends:
